# noisy-silence

./: .gitattributes  Cargo.toml  LICENSE.ISC  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: main.rs
